# Mini-NEAT

./: .gitignore  CMakeLists.txt  Makefile  NN_Plot.sh  NN_Test.sh  graph_node.py  zip_up.sh
ML/Basic/: k_means_clustering.cpp  linear_regression.cpp  logistic_regression.cpp
ML/NN/: ActivationFunctionTypes.h
ML/NN/NEAT/: EntityID.h  Genome.cpp  Genome.h  MarketSimulator.cpp  NeuralNet.cpp  Node.cpp  Node.h
ML/NN/Shitty/: GradientDescentOptimizer.cpp  GradientDescentOptimizer.h  NetworkLayers.cpp  NetworkLayers.h  NeuralNetwork.cpp  NeuralNetwork.h  NeuroEvolutionOptimizer.cpp  NeuroEvolutionOptimizer.h  Node.cpp  Node.h  Optimizer.h
data/: TestData.h
data/csv/: XRP Historical Data.csv
include/NEAT/: BestEncoding.h  Entity.h  InnovationNum.h  MarketSimulator.h  PopulationID.h
include/libs/Math/: GenFunctions.h  Indicators.h
include/mini_neat/NEAT/: ActivationFunctionTypes.h  Connection.h  NeuralNet.h  Node.h  NodeInitializationType.h  NodeType.h
include/mini_neat/libs/Data-Processing/: Output.h  ReadCSV.h
include/mini_neat/libs/Math/: ActivationFunctions.h  LossFunctionTypes.h  LossFunctions.h
libs/Data-Processing/: Output.cpp  ReadCSV.cpp
libs/Math/: ActivationFunctions.cpp  Indicators.cpp  LinearAlgebra.cpp  LinearAlgebra.h
main/: Main.cpp  Main1.cpp  Test.cpp
src/NEAT/: Connection.cpp  Entity.cpp  Node.cpp
src/libs/Math/: GenFunctions.cpp  LossFunctions.cpp
